haproxy/with-ingress-controller/namespace.yaml
# Namespace ISOLATING groups of resource within a single cluster.
# Do not use "default" namespace or any initial namespaces.
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller
