haproxy/with-ingress-controller/deployment.yaml
# HAProxy Ingress Controller run as a Pod in the cluster.
# This resource always listen to any changes in Kubernetes cluster
# and adjust its load balancing registry.
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: haproxy-kubernetes-ingress
      containers:
        - name: haproxy-ingress
          image: haproxytech/kubernetes-ingress
          args:
            - --configmap=haproxy-controller/haproxy-kubernetes-ingress
            # Add this to use ingress controller.
            - --ingress.class=prod-controller
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: 2560Mi
            requests:
              memory: 2048Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1042
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: stat
              containerPort: 1024
