haproxy/with-ingress-controller/service-lb.yaml
# Act as an abstraction between a network and Pods.
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  selector:
    run: haproxy-ingress
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      # Refer to deployment.yaml: deployments.pod.template.spec.containers[0].ports
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      # Refer to deployment.yaml: deployments.pod.template.spec.containers[0].ports
      targetPort: 8443
    - name: stat
      port: 1024
      protocol: TCP
      # Refer to deployment.yaml: deployments.pod.template.spec.containers[0].ports
      targetPort: 1024
