haproxy/with-ingress-controller/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: main-ingress
  namespace: ns-main
spec:
  ingressClassName: prod
  tls:
    - hosts:
        - hendrywilliam.com
        - "*.hendrywilliam.com"
      secretName: letsencrypt-prod
  rules:
    - host: hendrywilliam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
    - host: "*.hendrywilliam.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
